--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -99,8 +99,109 @@ button:hover {
   box-shadow: none;
 }
 
+.pomegranate-flat-button {
+  position: relative;
+  vertical-align: top;
+  width: auto;
+  height: auto;
+  padding: 0;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #c0392b;
+  border: 0;
+  border-bottom: 2px solid #b53224;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #b53224;
+  box-shadow: inset 0 -2px #b53224;
+  border-radius: 4px;
+  padding: 7px 10px;
+}
+.pomegranate-flat-button:active {
+  top: 1px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.orange-flat-button {
+  position: relative;
+  vertical-align: top;
+  width: auto;
+  height: auto;
+  padding: 0;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #f39c12;
+  border: 0;
+  border-bottom: 2px solid #e8930c;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #e8930c;
+  box-shadow: inset 0 -2px #e8930c;
+  border-radius: 4px;
+  padding: 7px 10px;
+}
+.orange-flat-button:active {
+  top: 1px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.silver-flat-button {
+  position: relative;
+  vertical-align: top;
+  width: auto;
+  height: auto;
+  padding: 0;
+  font-size: 18px;
+  color:white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #bdc3c7;
+  border: 0;
+  border-bottom: 2px solid #acb2b7;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #acb2b7;
+  box-shadow: inset 0 -2px #acb2b7;
+  border-radius: 4px;
+  padding: 7px 10px;
+}
+.silver-flat-button:active {
+  top: 1px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  color: white;
+}
+
+a.silver-flat-button
+{
+  text-decoration: none;
+}
+
+a.silver-flat-button:hover
+{
+  color: white;
+}
+
 .bloquear{
        pointer-events: none !important;
        cursor: default;
        color:Gray;
+}
+
+#titulo
+{
+  width: 100%;
+  border-bottom: 1px solid rgba(0,0,0,0.15);
+  margin-bottom: 15px;
+}
+
+h1#nombre
+{
+  margin-bottom: 10px;
 }
